{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 1738,
  "lineage": "74266267-7460-ec25-908d-395da4369c01",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062c4e9f9d06e5720",
            "arn": "arn:aws:ec2:ap-south-1:905418215222:elastic-ip/eipalloc-062c4e9f9d06e5720",
            "association_id": "eipassoc-0bfd9322061d96516",
            "domain": "vpc",
            "id": "eipalloc-062c4e9f9d06e5720",
            "instance": "i-052333da88dbc9fca",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03e9dbf369636fdcf",
            "private_dns": "ip-10-0-1-104.ap-south-1.compute.internal",
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-43-204-66-44.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.66.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "GreenEncoElasticIP_Public"
            },
            "tags_all": {
              "Name": "GreenEncoElasticIP_Public"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.Ec2_instance_2",
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.aws_security_group.GreenEnco_security_group_Public",
            "module.ec2.tls_private_key.rsa-4096-GreenEnco",
            "module.vpc.aws_subnet.public_01",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ec2_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00bb6a80f01f03502",
            "arn": "arn:aws:ec2:ap-south-1:905418215222:instance/i-036012f7aebfb1e53",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036012f7aebfb1e53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "GreenEnco_mumbai.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e942d86542780bea",
            "private_dns": "ip-10-0-2-6.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e31c454cc839819b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc34522404c45ad3",
            "tags": {
              "Name": "GreenEnco_Prod(workernode)_Instance"
            },
            "tags_all": {
              "Name": "GreenEnco_Prod(workernode)_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041a3da99449eb67a"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.aws_security_group.GreenEnco_security_group_Private",
            "module.ec2.tls_private_key.rsa-4096-GreenEnco",
            "module.vpc.aws_subnet.private_01",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ec2_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00bb6a80f01f03502",
            "arn": "arn:aws:ec2:ap-south-1:905418215222:instance/i-052333da88dbc9fca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052333da88dbc9fca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.xlarge",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da1a:5a5:2e01:3b54:14c8:5b1:1a0f"
            ],
            "key_name": "GreenEnco_mumbai.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e9dbf369636fdcf",
            "private_dns": "ip-10-0-1-104.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-43-204-66-44.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.66.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09d5df5a921152814",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0851cc0c87b6e8d0f",
            "tags": {
              "Name": "GreenEnco_Development_Instance"
            },
            "tags_all": {
              "Name": "GreenEnco_Development_Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-049783db6d55b93f8"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.aws_security_group.GreenEnco_security_group_Public",
            "module.ec2.tls_private_key.rsa-4096-GreenEnco",
            "module.vpc.aws_subnet.public_01",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GreenEnco_security_group_Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:security-group/sg-041a3da99449eb67a",
            "description": "Greenenco security group_Private",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041a3da99449eb67a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "GreenEnco-Private-SG",
            "name_prefix": "",
            "owner_id": "905418215222",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GreenEnco_security_group_Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:security-group/sg-049783db6d55b93f8",
            "description": "Greenenco security group_Public",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049783db6d55b93f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPs access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "sonarqube access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "GreenEnco-Public-SG",
            "name_prefix": "",
            "owner_id": "905418215222",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecr",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_vpc_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:vpc-endpoint/vpce-06eda15bdb4fa4ea4",
            "dns_entry": [
              {
                "dns_name": "vpce-06eda15bdb4fa4ea4-0slouuzg.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-06eda15bdb4fa4ea4-0slouuzg-ap-south-1b.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-06eda15bdb4fa4ea4-0slouuzg-ap-south-1a.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z074717821WS6ZWY2V364"
              },
              {
                "dns_name": "*.dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z074717821WS6ZWY2V364"
              },
              {
                "dns_name": "dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z07008551UBTSEMD26JEP"
              },
              {
                "dns_name": "*.dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z07008551UBTSEMD26JEP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06eda15bdb4fa4ea4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0079157a634b9e927",
              "eni-0f589923ad309c3f5"
            ],
            "owner_id": "905418215222",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-041a3da99449eb67a"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.dkr",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.64",
                "ipv6": "2406:da1a:5a5:2e01:9ace:792:c60e:558",
                "subnet_id": "subnet-0851cc0c87b6e8d0f"
              },
              {
                "ipv4": "10.0.2.53",
                "subnet_id": "subnet-0bc34522404c45ad3"
              }
            ],
            "subnet_ids": [
              "subnet-0851cc0c87b6e8d0f",
              "subnet-0bc34522404c45ad3"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "dependencies": [
            "module.ec2.aws_security_group.GreenEnco_security_group_Private",
            "module.ecr.data.aws_region.current",
            "module.vpc.aws_subnet.private_01",
            "module.vpc.aws_subnet.public_01",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:vpc/vpc-01f069f17e0fe5eee",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0460adc486dbbdb6f",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0317d521db5d2be67",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f069f17e0fe5eee",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0c8261cde76fa2981",
            "ipv6_cidr_block": "2406:da1a:5a5:2e00::/56",
            "main_route_table_id": "rtb-0cc3928473906a609",
            "owner_id": "905418215222",
            "tags": {
              "Name": "GreenEnco_VPC_Mumbai"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-075bc90ee477e40cd",
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01eeb10eac749306e",
            "arn": "arn:aws:ec2:ap-south-1:905418215222:elastic-ip/eipalloc-01eeb10eac749306e",
            "association_id": "eipassoc-00cf2d3e548114689",
            "domain": "vpc",
            "id": "eipalloc-01eeb10eac749306e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0c1be90279a674098",
            "private_dns": "ip-10-0-1-229.ap-south-1.compute.internal",
            "private_ip": "10.0.1.229",
            "public_dns": "ec2-13-202-236-192.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.236.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT EIP"
            },
            "tags_all": {
              "Name": "NAT EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:internet-gateway/igw-0f9eccd670076437b",
            "id": "igw-0f9eccd670076437b",
            "owner_id": "905418215222",
            "tags": {
              "Name": "GreenEnco_Internet Gateway"
            },
            "tags_all": {
              "Name": "GreenEnco_Internet Gateway"
            },
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01eeb10eac749306e",
            "association_id": "eipassoc-00cf2d3e548114689",
            "connectivity_type": "public",
            "id": "nat-0c3ec1a1ceddd6511",
            "network_interface_id": "eni-0c1be90279a674098",
            "private_ip": "10.0.1.229",
            "public_ip": "13.202.236.192",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0851cc0c87b6e8d0f",
            "tags": {
              "Name": "GreenEnco_NAT Gateway"
            },
            "tags_all": {
              "Name": "GreenEnco_NAT Gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_01",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:route-table/rtb-0acae50a9a643622a",
            "id": "rtb-0acae50a9a643622a",
            "owner_id": "905418215222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9eccd670076437b",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9eccd670076437b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_GreenEnco_RouteTable"
            },
            "tags_all": {
              "Name": "Public_GreenEnco_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:route-table/rtb-00483c4c1f4fc3abf",
            "id": "rtb-00483c4c1f4fc3abf",
            "owner_id": "905418215222",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c3ec1a1ceddd6511",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_GreenEnco_RouteTable"
            },
            "tags_all": {
              "Name": "Private_GreenEnco_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_01",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee89c12ec1b3fbb1",
            "route_table_id": "rtb-0acae50a9a643622a",
            "subnet_id": "subnet-0851cc0c87b6e8d0f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt1",
            "module.vpc.aws_subnet.public_01",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00082b8d5963aa516",
            "route_table_id": "rtb-00483c4c1f4fc3abf",
            "subnet_id": "subnet-0bc34522404c45ad3"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.rt2",
            "module.vpc.aws_subnet.private_01",
            "module.vpc.aws_subnet.public_01",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet3_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06322d6b28d6fb397",
            "route_table_id": "rtb-00483c4c1f4fc3abf",
            "subnet_id": "subnet-015067d460a81eeb9"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.rt2",
            "module.vpc.aws_subnet.private_02",
            "module.vpc.aws_subnet.public_01",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:subnet/subnet-0bc34522404c45ad3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc34522404c45ad3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418215222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "GreenEnco_Private Subnet-1"
            },
            "tags_all": {
              "Name": "GreenEnco_Private Subnet-1"
            },
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:subnet/subnet-015067d460a81eeb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015067d460a81eeb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418215222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "GreenEnco_Private Subnet-2"
            },
            "tags_all": {
              "Name": "GreenEnco_Private Subnet-2"
            },
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:subnet/subnet-0851cc0c87b6e8d0f",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0851cc0c87b6e8d0f",
            "ipv6_cidr_block": "2406:da1a:5a5:2e01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0428a10ba4ac52a0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418215222",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "GreenEnco_Public Subnet-01"
            },
            "tags_all": {
              "Name": "GreenEnco_Public Subnet-01"
            },
            "vpc_id": "vpc-01f069f17e0fe5eee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418215222:vpc/vpc-01f069f17e0fe5eee",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a1b6dd40ab437f1",
            "default_route_table_id": "rtb-0cc3928473906a609",
            "default_security_group_id": "sg-08f30b367f66a8d09",
            "dhcp_options_id": "dopt-0317d521db5d2be67",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f069f17e0fe5eee",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0c8261cde76fa2981",
            "ipv6_cidr_block": "2406:da1a:5a5:2e00::/56",
            "ipv6_cidr_block_network_border_group": "ap-south-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc3928473906a609",
            "owner_id": "905418215222",
            "tags": {
              "Name": "GreenEnco_VPC_Mumbai"
            },
            "tags_all": {
              "Name": "GreenEnco_VPC_Mumbai"
            }
          }
        }
      ]
    }
  ]
}